force-app/main/default/objects/GP_Folder__c/GP_Folder__c.object-meta.xml
<CustomObject>
    <label>GP Folder</label>
    <nameField>
        <label>GP Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>