force-app/main/default/objects/GP_Folder__c/fields/Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>Folder_Path__c</fullName>
    <label>Folder Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>