force-app/main/default/objects/GP_Folder__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Yet to upload</fullName>
            </value>
            <value>
                <fullName>Pending to upload</fullName>
            </value>
            <value>
                <fullName>Re-upload</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>