force-app/main/default/objects/GP_Folder__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eligibility</fullName>
            </value>
            <value>
                <fullName>eligibilty</fullName>
            </value>
            <value>
                <fullName>evaluation</fullName>
            </value>
            <value>
                <fullName>nts</fullName>
            </value>
            <value>
                <fullName>exam</fullName>
            </value>
            <value>
                <fullName>last_minute</fullName>
            </value>
            <value>
                <fullName>nts_rescheduling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>