force-app/main/default/objects/GP_Folder__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GP Folders</relationshipLabel>
    <relationshipName>GP_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>